--- a/index.html
+++ b/index.html
@@ -2,34 +2,23 @@
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>ЗАГОЛОВОК</title>
+		<title>Образовательный центр</title>
 	</head>
 	<body>
 	<h1 style="text-indent: 650px"> Образовательный центр иностранных языков </h1>
 	<menu>
+	<li style="display: inline-block"><a href="course.html">Курсы</a></li>
     <li style="display: inline-block"><a href="banner.html">Английский язык</a></li>
-    <li style="display: inline-block"><a href="2.html">Французский язык</a></li>
-    <li style="display: inline-block"><a href="3.html">Немецкий язык</a></li>
+    <li style="display: inline-block">Французский язык</li>
+    <li style="display: inline-block">Немецкий язык</li>
     <li style="display: inline-block"><a href="tables.html">Расценки</a></li>
   </menu>
 		
-		<p> Абзац. </p>
-		<!--<ul>
-			<li type="disc"> первая строчка </li>
-			<li type="circle"> вторая строчка </li>
-			<li type="square"> третья строчка </li>
-		</ul>
-		<ol type="1" reversed>
-			<li> первая строчка </li>
-			<li> вторая строчка </li>
-			<li> третья строчка </li>
-		</ol>-->
+		<p> Скоро открытие. </p>
 		<marquee>Приходите в наш центр. Наш центр лучший!</marquee>
 		<iframe src="banner.html" width="468" height="500" align="left">
 			Ваш браузер не поддерживает плавающие фреймы!
 		</iframe>
-		<!--<a href="banner.html" target="_self"> Гиперссылка </a>
-		<br><a href="tables.html" target="_self"> Гиперссылка на таблицы </a></br>-->
 
 	</body>
 </html>
