--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" style="text/css" href="css/style.css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Образовательный центр</title>
 	</head>
 	<body>
 	<h1 style="text-indent: 650px"> Образовательный центр иностранных языков </h1>
-	<menu>
+	<div class="back">
+		<ul id="menu">
+			<li><a href="course.html">Курсы</a>
+			<ul>
+				<li><a href="banner.html">Английский язык</a></li>
+				<li><a href=#>Французский язык</a></li>
+				<li><a href=#>Немецкий язык</a></li>
+			</ul></li>
+			<li><a href="tables.html">Расценки</a></li>
+		</ul>
+		<!-- <a href="course.html"> Курсы </a>
+		<a href="banner.html"> Английский язык </a>
+		<a href="tables.html"> Расценки </a> -->
+	</div>
+	<!-- <menu>
 	<li style="display: inline-block"><a href="course.html">Курсы</a></li>
     <li style="display: inline-block"><a href="banner.html">Английский язык</a></li>
     <li style="display: inline-block">Французский язык</li>
     <li style="display: inline-block">Немецкий язык</li>
     <li style="display: inline-block"><a href="tables.html">Расценки</a></li>
-  </menu>
+  </menu> -->
 		
 		<p> Скоро открытие. </p>
 		<marquee>Приходите в наш центр. Наш центр лучший!</marquee>
