--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html>
 	<head>
 		<link rel="stylesheet" style="text/css" href="css/style.css" />
+		<link href="ip.php" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Образовательный центр</title>
 	</head>
 	<body>
-	<h1 style="text-indent: 650px"> Образовательный центр иностранных языков </h1>
+	<input type=button value="Show Time" onclick="alert(new Date())">
+	<div class="head">
+		<h1> Образовательный центр иностранных языков </h1>
+	</div>
+	
 	<div class="back">
 		<ul id="menu">
 			<li><a href="course.html">Курсы</a>
-			<ul>
-				<li><a href="banner.html">Английский язык</a></li>
-				<li><a href=#>Французский язык</a></li>
-				<li><a href=#>Немецкий язык</a></li>
-			</ul></li>
+            <li><a href=#>Языки</a>
+				<ul>
+					<li><a href="banner.html">Английский язык</a></li>
+					<li><a href=#>Французский язык</a></li>
+					<li><a href=#>Немецкий язык</a></li>
+				</ul></li>
 			<li><a href="tables.html">Расценки</a></li>
 		</ul>
 		<!-- <a href="course.html"> Курсы </a>
@@ -31,9 +37,13 @@
 		
 		<p> Скоро открытие. </p>
 		<marquee>Приходите в наш центр. Наш центр лучший!</marquee>
-		<iframe src="banner.html" width="468" height="500" align="left">
+		<div class="frame">
+			<iframe src="banner.html">
 			Ваш браузер не поддерживает плавающие фреймы!
 		</iframe>
-
+		</div>
+		
+		<!-- <script type="text/javascript" src="ip.php"></script>
+		<?php ipinfo(); ?> -->
 	</body>
 </html>
