--- a/banner.html
+++ b/banner.html
@@ -1,12 +1,20 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 	<head>
+		<script type="text/javascript" src="js/prototype.js"></script>
+<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>
+<script type="text/javascript" src="js/lightbox.js"></script> 
+<link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" />
+		<link rel="stylesheet" style="text/css" href="css/style.css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Английский язык</title>
 	</head>
 	<body>
 		<h1> Курсы по изучению английского языка </h1>
-		<img src="ScF6RQD1.jpg" width="300" height="300" title="Записывайся!">
+		<a href="ScF6RQD1" rel="lightbox"><img src="ScF6RQD1.jpg"></a>
+		<div class="photo" data-title="Записывайся!">
+			<!-- <img src="ScF6RQD1.jpg" alt=""> -->
+		</div>
+		
 	</body>
 </html>
