--- a/tables.html
+++ b/tables.html
@@ -3,27 +3,28 @@
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" style="text/css" href="css/style.css" />
 		<title>Цены</title>
 	</head>
 	<body>
-		<TABLE BORDER="1" CELLSPACING="0" WIDTH="180">
+		<TABLE BORDER="1" CELLSPACING="0"	>
 			<CAPTION> Расценки для курсов </CAPTION>
 			<TH> Название курса </TH>
 			<TH> Продолжительность </TH>
 			<TH> Цена </TH>
 			<TR>
 				<TD> Углубленное изучение английского языка </TD>
-				<TD> 4недели </TD>
+				<TD> 4 недели </TD>
 				<TD> 20000 </TD>
 			</TR>
 			<TR>
 				<TD> Углубленное изучение французского языка </TD>
-				<TD> 5недель </TD>
+				<TD> 5 недель </TD>
 				<TD> 25000 </TD>
 			</TR>
 			<TR>
 				<TD> Углубленное изучение немецкого языка </TD>
-				<TD> 3недели </TD>
+				<TD> 3 недели </TD>
 				<TD> 30000 </TD>
 				</TR>
 		</TABLE>
