--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<title>Образовательный центр</title>
 	</head>
 	<body>
+	<input type=button value="Информация обо мне" onclick="alert(ip, hostname)">
 	<div class="head">
 		<h1> Образовательный центр иностранных языков </h1>
 	</div>
