--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="text/javascript">  
+			setInterval(function () {  
+ 			date = new Date(),  
+ 			h = date.getHours(),  
+ 			m = date.getMinutes(),  
+ 			s = date.getSeconds(),  
+ 			h = (h < 10) ? '0' + h : h,  
+ 			m = (m < 10) ? '0' + m : m,  
+ 			s = (s < 10) ? '0' + s : s,  
+ 			document.getElementById('time').innerHTML = h + ':' + m + ':' + s;  
+			}, 1000);
+		</script>
+
+		<span style="color:#7e5a25; font-size:14pt; border:2px solid #e1d4ae; background:#e8e3d4; padding:5px;">
+		<span id="time">00:00:00</span>
+		</span>
 		<script type"text/javascript">
 		function setDynCSS(url){
 			if(!arguments.length)
@@ -30,7 +46,12 @@
 		<title>Образовательный центр</title>
 	</head>
 	<body>
-	<input type=button value="Время" onclick="alert(new Date())">
+		<script>
+        let name = prompt("NAME,CENAME?");
+ 
+        alert(`Приветствуем, ${name}!`);
+    </script>
+	<input type=button value="Информация обо мне" onclick="alert(ip, hostname)">
 	<div class="head">
 		<h1> Образовательный центр иностранных языков </h1>
 	</div>
