--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 					<li><a href=#>Немецкий язык</a></li>
 				</ul></li>
 			<li><a href="tables.html">Расценки</a></li>
+			<li><a href="gallery.html">Галлерея</a></li>>
 		</ul>
 		<!-- <a href="course.html"> Курсы </a>
 		<a href="banner.html"> Английский язык </a>
