--- a/banner.html
+++ b/banner.html
@@ -7,9 +7,8 @@
 	</head>
 	<body>
 		<h1> Курсы по изучению английского языка </h1>
-		<a href="ScF6RQD1" rel="lightbox"><img src="ScF6RQD1.jpg"></a>
 		<div class="photo" data-title="Записывайся!">
-			<!-- <img src="ScF6RQD1.jpg" alt=""> -->
+			<img src="ScF6RQD1.jpg" alt="">
 		</div>
 		
 	</body>
