--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</head>
 	<body>
 		<script>
-        let name = prompt("NAME,CENAME?");
+        let name = prompt("Как к вам обращаться?");
  
         alert(`Приветствуем, ${name}!`);
     </script>
