--- a/gallery.html
+++ b/gallery.html
@@ -6,10 +6,10 @@
 <script type="text/javascript" src="js/lightbox.js"></script>
 		<link rel="stylesheet" style="text/css" href="css/style.css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Английский язык</title>
+		<title>Галерея</title>
 	</head>
 	<body>
-		<h1> Курсы по изучению английского языка </h1>
+		<h1> Галерея </h1>
         <a href="ScF6RQD1.jpg" rel="lightbox-one"><img src="ScF6RQD1.jpg" width="200" height="200"></a>
         <a href="flag-germanii.jpg" rel="lightbox-one"><img src="flag-germanii.jpg" width="200" height="200"></a>
 		<a href="s1200.png" rel="lightbox-one"><img src="s1200.png" width="200" height="200"></a>
