--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 		<link rel="stylesheet" style="text/css" href="css/style.css" />
 		<link rel="stylesheet" id=dyncss href="css/style2.css" />
 		<link href="ip.php" />
+		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+		<script type="text/javascript" src="js/carusel.js"></script>
+
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Образовательный центр</title>	
 
@@ -57,7 +60,6 @@
 	<input type=button value="Информация обо мне" onclick="alert(ip, hostname)">
 	<div class="head">
 		<h1> Образовательный центр иностранных языков </h1>
-	</div>
 	
 	
 	<div class="back">
@@ -83,13 +85,48 @@
     <li style="display: inline-block">Немецкий язык</li>
     <li style="display: inline-block"><a href="tables.html">Расценки</a></li>
   </menu> -->
-		
+		</div>
+	
+	
+			
+	
 		<p> Скоро открытие. </p>
 		<marquee>Приходите в наш центр. Наш центр лучший!</marquee>
+		
+		
+		
 		<div class="frame">
 			<iframe src="banner.html">
 			Ваш браузер не поддерживает плавающие фреймы!
 		</iframe>
+		</div>
+		
+		<div class="newsimgpreview"></div>
+	<div class="newscarusel">
+
+	<div>
+		<a class="newstitle" href="https://flc-reward.ru/news/2019-12-06">Английский клуб для школьников на Спартановке посвященный Дню Благодарения/"Thanksgiving Day"</a>
+		<span class="newstext">30 ноября в филиале на Спартановке прошел очередной разговорный Английский клуб для школьников, посвященный «Дню Благодарения». День благодарения отмечается только в двух странах - США и Канаде, однако известно торжество на весь мир. Преподавателями на данном клубе были ведущий отечественный преподаватель филиала на Спартановке – Щелконогова Мария и иностранный преподаватель из Нью-Йорка – Бен.            &nbsp;
+            </span>
+		<span class='newsimg'>img/1.jpg</span>
+		<hr>
+	</div>
+			
+	<div>
+		<a class="newstitle" href="https://flc-reward.ru/news/2019-12-05">30.11.19 Мастер-класс для дошкольников «Тайна Коко» (по мотивам известного мультфильма)</a>
+		<span class="newstext">Прекрасным субботним утром, 30.11.19 в Ворошиловском филиале проходил мастер-класс для самых маленьких слушателей. Наш центр развивает не только способность малышей говорить на английском языке, но и помогает расширить кругозор и знания о других странах, их праздниках и обычаях.             &nbsp;
+            </span>
+		<span class='newsimg'>img/2.jpg</span>
+		<hr>
+	</div>
+			
+	<div>
+		<a class="newstitle" href="https://flc-reward.ru/news/2019-12-02">Открытые лекции проф. О.А Леонтович «Американский и британский варианты  английского языка» для слушателей и преподавателей</a>
+		<span class="newstext">ТОЛЬКО С 5 по 7 декабря! У слушателей курсов, преподавателей и всех желающих есть УНИКАЛЬНАЯ ВОЗМОЖНОСТЬ посетить интерактивный курс лекций профессора О. А. Леонтович на тему «Американский и британский варианты английского языка»
+            </span>
+		<span class='newsimg'>img/3.jpg</span>
+		<hr>
+	</div>
 		</div>
 		<div>
 			<input type=button value="Стиль 1" onclick=setDynCSS('css/style.css')>
